--- a/a01-blink-onboard-led/.cargo/config
+++ b/a01-blink-onboard-led/.cargo/config
@@ -3,3 +3,9 @@ runner = "arm-none-eabi-gdb"
 
 [build]
 target = "thumbv7m-none-eabi"    # Cortex-M3
+
+
+rustflags = [
+    # LLD (shipped with the Rust toolchain) is used as the default linker
+    "-C", "link-arg=-Tlink.x",
+    
