--- a/a01-blink-onboard-led/Cargo.toml
+++ b/a01-blink-onboard-led/Cargo.toml
@@ -17,3 +17,6 @@ nb = "0.1.2"
 [dependencies.stm32f1xx-hal]
 version = "0.6.0"
 features = ["rt", "stm32f103", "medium"]
+
+# this lets you use `cargo fix`!
+[[bin]]
