--- a/a01-blink-onboard-led/Makefile
+++ b/a01-blink-onboard-led/Makefile
@@ -2,3 +2,5 @@ AOC = arm-none-eabi-objcopy
 KERNEL_BIN = kernel.bin
 KERNEL_ELF = target/$(TARGET)/debug
 MAIN_FILE = src/main.rs
+
+AFLAGS = -O binary
