Adding build command

--- a/a01-blink-onboard-led/Makefile
+++ b/a01-blink-onboard-led/Makefile
@@ -10,3 +10,6 @@ USB_PORT = /dev/ttyUSB0
 
 run:
 	qemu-system-arm --cpu cortex-m3 --machine lm3s6965evb --nographic --semihosting-config enable=on,target=native --kernel target/thumbv7m-none-eabi/debug/a01-blink-onboard-led
+
+build:
+	cargo build
