--- a/a01-blink-onboard-led/Makefile
+++ b/a01-blink-onboard-led/Makefile
@@ -25,3 +25,6 @@ clean:
 	rm $(KERNEL_BIN)
 
 all: $(KERNEL_BIN)
+
+$(KERNEL_BIN): $(KERNEL_ELF) $(MAIN_FILE)
+	$(AOC) $(AFLAGS) $(KERNEL_ELF)/a01-blink-onboard-led $(KERNEL_BIN)
